# localSuperWhisper

./: .gitignore  CLAUDE.md  README.md  archonSetup.bat  ecosystem.config.cjs  index.html  manage.ps1  manage.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
docs/: currentStatus.md  linux-port-plan.md
docs/superpowers/plans/: 2026-04-03-local-super-whisper.md
docs/superpowers/specs/: 2026-04-03-local-super-whisper-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  desktop-template.hbs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  db.rs  hotkey.rs  lib.rs  main.rs  paste.rs  sounds.rs  state.rs  transcribe.rs  win32_hotkey.rs
src/components/: ChecklistItem.tsx  StatCard.tsx
src/hooks/: useTauriEvent.ts
src/overlay/: Overlay.tsx  TranscriptDisplay.tsx  Waveform.tsx
src/settings/: Configuration.tsx  History.tsx  Home.tsx  Layout.tsx  Setup.tsx  Vocabulary.tsx
src/styles/: tailwind.css
