[package]
name = "local-super-whisper"
version = "0.1.0"
edition = "2021"

[lib]
name = "local_super_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
enigo = { version = "0.2", features = ["serde"] }
rodio = "0.19"
window-vibrancy = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }
